--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -71,8 +71,11 @@
     "wear_a_face_covering": "wear a face covering."
   },
   "errors": {
+    "authorization_failure": "You are not authorized to perform this action.",
     "description": "An error has occurred. Please reload the app.",
-    "maxed_submission_requests": "You have reached the max number of submissions, please wait 15 minutes to resubmit.",
+    "invalid_phone_number": "Phone number must be 10 digits",
+    "maxed_submission_header": "Maximum submissions reached.",
+    "maxed_submission_requests": "You have reached the max number of submissions, please wait 5 minutes to resubmit.",
     "reload": "Reload",
     "something_went_wrong": "Something went wrong",
     "title": "Unknown Error",
