GAEN-645, checking for phone numbers used every 5 minutes in callbac… (#879)
* # This is a combination of 4 commits.
# This is the 1st commit message:

GAEN-645, stop users from blasting the callback form over and over again.

# This is the commit message #2:

Removed space typo in common.hascode
# This is the commit message #3:

Removed need to save phone number in local storage and replaced with count instead

# This is the commit message #4:

Removed need to save phone number in local storage and replaced with count instead

* parent 6488999cabeb8bc801437cdcdd349ad9bfd455af
author lundjrl <jrlbidamin@gmail.com> 1618490627 -0400
committer lundjrl <jrlbidamin@gmail.com> 1618490923 -0400

parent 6488999cabeb8bc801437cdcdd349ad9bfd455af
author lundjrl <jrlbidamin@gmail.com> 1618490627 -0400
committer lundjrl <jrlbidamin@gmail.com> 1618490627 -0400

GAEN-645 Adjusted Callback form to allow submissions every 5 minutes.

Update Form.tsx

Update Form.tsx

Changed name of value that is being saved to async storage

Update Form.tsx

Fixed error typo between 'error.' and 'errors.'

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,7 @@
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
-    "hascode": "Already have a code? ",
+    "hascode": "Already have a code?",
     "learn_more": "Learn more",
     "maybe_later": "Maybe later",
     "more": "More",
@@ -83,7 +83,11 @@
     "wear_a_face_covering": "wear a face covering."
   },
   "errors": {
+    "authorization_failure": "You are not authorized to perform this action.",
     "description": "An error has occurred. Please reload the app.",
+    "invalid_phone_number": "Phone number must be 10 digits",
+    "maxed_submission_header": "Maximum submissions reached.",
+    "maxed_submission_requests": "You have reached the max number of submissions, please wait 5 minutes to resubmit.",
     "reload": "Reload",
     "something_went_wrong": "Something went wrong",
     "title": "Unknown Error",
