update locales,add Ojibwe

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -57,6 +57,7 @@
   },
   "errors": {
     "description": "Προέκυψε σφάλμα. Φορτώστε ξανά την εφαρμογή.",
+    "invalid_phone_number": "Ο αριθμός τηλεφώνου πρέπει να είναι 10 ψηφία",
     "reload": "Φόρτωση εκ νέου",
     "something_went_wrong": "Κάτι πήγε στραβά",
     "title": "Άγνωστο σφάλμα"
