--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -23,7 +23,7 @@
     "continue": "계속",
     "done": "완료",
     "edit": "수정",
-    "hascode": "코드가 이미 받으셨습니까? ",
+    "hascode": "코드가 이미 받으셨습니까?",
     "learn_more": "더 알아보기",
     "maybe_later": "나중에",
     "more": "더 보기",
@@ -174,7 +174,7 @@
       "schedule_callback": "{{healthAuthorityName}}의 지원을 받으려면 전화를 예약하십시오.",
       "speak_with_covid_support": "코로나19 지원에 문의"
     },
-    "exposure_report": "노출 신고서",
+    "exposure_report": "노출 기록",
     "exposure_summary": "{{startDate}}에서 {{endDate}} 사이에 근처에 있었던 사람들 중 에 하나가 코로나19 확진 판정을 받았습니다.",
     "health_guidelines": {
       "six_feet_apart": "6 피트 간격 유지",
@@ -191,8 +191,8 @@
     "more_info_header": "더 많은 정보",
     "next_steps": "다음 단계",
     "no_connectivity_message": "인터넷에 연결되어 있지 않습니다!",
-    "no_exposure_reports": "노출 신고서 없음",
-    "no_exposure_reports_over_past": "지난 14일 동안 노출 신고서를 받지 못했습니다.",
+    "no_exposure_reports": "노출 기록 없음",
+    "no_exposure_reports_over_past": "지난 14일 동안 노출 알림을 받지 못했습니다.",
     "possible_exposures": "코로나19 노출 가능성",
     "recommended_quarantine": "권장 격리 기간",
     "review_health_guidance": "보건 지침 검토",
@@ -322,8 +322,8 @@
       "body_5": "만약 일치하는 경우 {{applicationName}} 앱은 귀하에게 해당 내용을 알리고, 보건부의 추가 지침을 제공합니다.\n\n이것은 {{applicationName}} 앱이 귀하가 누구이며, 어디에 있었는지에 대한 정보 없이 건강에 대한 결정을 내리고 지역사회를 안전하게 유지할 수 있는 방법입니다.",
       "image_label_1": "근처에 임의 ID 문자열이 있는 휴대 전화를 들고 있는 남자의 이미지",
       "image_label_2": "임의의 ID를 교환하는 두 대의 스마트폰 이미지",
-      "image_label_3": "익명의 인증 코드를 입력하는 남성의 이미지입니다",
-      "image_label_4": "여러 개의 임의 ID와 근처에 인증 코드가 있는 스마트폰 이미지",
+      "image_label_3": "익명의 인증 코드를 입력하는 남성의 이미지",
+      "image_label_4": "스마트폰 근처에 있는 여러 개의 임의 ID와 인증 코드에 있는 이미지",
       "image_label_5": "전화를 사용하는 여자의 이미지",
       "subheader_1": "노출 알림을 켜면 휴대폰에 자주 변경되는 임의의 ID 태그가 지정됩니다.",
       "subheader_2": "노출 알림이 활성화 된 휴대폰은 마주 치는 다른 기기와 ID를 교환합니다.",
