Ran through blueprint on how we can lokalize links. We'll add them as a json value in our lokalize json files and they will switch depending on language selected in the app.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -299,6 +299,10 @@
     "question_icon": "Question mark icon",
     "unchecked_checkbox": "Unchecked checkbox"
   },
+  "links": {
+    "health_authority_advice_url": "",
+    "health_authority_learn_more_url": ""
+  },
   "navigation": {
     "exposure_history": "Exposures",
     "home": "Dashboard",
